syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "pagination.proto";

option go_package = "./pkg/protoapi";

service Reconcilers {
  rpc Register(RegisterReconcilerRequest) returns (RegisterReconcilerResponse) {}
  rpc Get(GetReconcilerRequest) returns (GetReconcilerResponse) {}
  rpc List(ListReconcilersRequest) returns (ListReconcilersResponse) {}
  rpc Config(ConfigReconcilerRequest) returns (ConfigReconcilerResponse) {}
  rpc SetReconcilerErrorForTeam(SetReconcilerErrorForTeamRequest) returns (SetReconcilerErrorForTeamResponse) {}
  rpc RemoveReconcilerErrorForTeam(RemoveReconcilerErrorForTeamRequest) returns (RemoveReconcilerErrorForTeamResponse) {}
  rpc SuccessfulTeamSync(SuccessfulTeamSyncRequest) returns (SuccessfulTeamSyncResponse) {}
  rpc DeleteResources(DeleteReconcilerResourcesRequest) returns (DeleteReconcilerResourcesResponse) {}
  rpc SaveResources(SaveReconcilerResourceRequest) returns (SaveReconcilerResourceResponse) {}
  rpc Resources(ListReconcilerResourcesRequest) returns (ListReconcilerResourcesResponse) {}
}

message SuccessfulTeamSyncRequest {
  string team_slug = 1;
}

message SuccessfulTeamSyncResponse {}

message SetReconcilerErrorForTeamRequest {
  string team_slug = 1;
  string reconciler_name = 2;
  string correlation_id = 3;
  string error_message = 4;
}

message SetReconcilerErrorForTeamResponse {}

message RemoveReconcilerErrorForTeamRequest {
  string team_slug = 1;
  string reconciler_name = 2;
}

message RemoveReconcilerErrorForTeamResponse {}

message Reconciler {
  string name = 1;
  string display_name = 2;
  string description = 3;
  bool enabled = 4;
  bool member_aware = 5;
}

message ReconcilerConfig {
  string key = 1;
  string display_name = 2;
  string description = 3;
  string value = 4;
  bool secret = 5;
}

message ReconcilerConfigSpec {
  string key = 1;
  string display_name = 2;
  string description = 3;
  bool secret = 4;
}

message NewReconciler {
  string name = 1;
  string display_name = 2;
  string description = 3;
  bool member_aware = 4;
  repeated ReconcilerConfigSpec config = 5;
  bool enableByDefault = 6;
}

message RegisterReconcilerRequest {
  repeated NewReconciler reconcilers = 1;
}

message RegisterReconcilerResponse {}

message GetReconcilerRequest {
  string name = 1;
}

message GetReconcilerResponse {
  Reconciler reconciler = 1;
}

message ListReconcilersRequest {
  int64 limit = 1;
  int64 offset = 2;
}

message ListReconcilersResponse {
  repeated Reconciler nodes = 1;
  PageInfo page_info = 2;
}

message ConfigReconcilerRequest {
  int64 limit = 1;
  int64 offset = 2;
  string reconciler_name = 3;
}

message ConfigReconcilerResponse {
  repeated ReconcilerConfig nodes = 1;
  PageInfo page_info = 2;
}

message ReconcilerResource {
  string id = 1;
  string reconciler_name = 2;
  string team_slug = 3;
  string name = 4;
  bytes value = 5;
  bytes metadata = 6;
  google.protobuf.Timestamp created_at = 7;
  google.protobuf.Timestamp updated_at = 8;
}

message SaveReconcilerResourceResponse {}

message SaveReconcilerResourceRequest {
  repeated NewReconcilerResource resources = 1;
  string reconciler_name = 2;
  string team_slug = 3;
}

message DeleteReconcilerResourcesRequest {
  string reconciler_name = 1;
  string team_slug = 2;
}

message DeleteReconcilerResourcesResponse {}

message NewReconcilerResource {
  string name = 1;
  bytes value = 2;
  bytes metadata = 3;
}

message ListReconcilerResourcesRequest {
  int64 limit = 1;
  int64 offset = 2;
  string reconciler_name = 3;
  string team_slug = 4;
}

message ListReconcilerResourcesResponse {
  repeated ReconcilerResource nodes = 1;
  PageInfo page_info = 2;
}
